--- a/data/cards/03084730.yaml
+++ b/data/cards/03084730.yaml
@@ -2,11 +2,11 @@ konami_id: 18159
 password: 3084730
 name:
   en: Bio-Insect Armor
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bioinsekten-Panzer
+  es: Armadura Bio-Insecto
+  fr: Bio-Armure d'Insecte
+  it: Armatura Bio-Insetto
+  pt: Armadura Bioinseto
   ja: <ruby>昆虫機甲鎧<rt>バイオインセクトアーマー</rt></ruby>
   ja_romaji: Baio Insekuto Āmā
   ko: 바이오인섹트아머
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is in your hand or GY and you do not control "Bio-Insect Armor": You can target 1 Insect monster you control; equip this card to it, but banish it when it leaves the field, also banish this Equip Card when it leaves the field. You can only use this effect of "Bio-Insect Armor" once per turn. The equipped monster gains 1500 ATK/2000 DEF during the Battle Phase and Main Phase 2, only.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls sich diese Karte in deiner Hand oder deinem Friedhof befindet und du nicht „Bioinsekten-Panzer“ kontrollierst: Du kannst 1 Insekt-Monster wählen, das du kontrollierst; rüste es mit dieser Karte aus, aber verbanne es, wenn es das Spielfeld verlässt, zusätzlich verbanne diese Ausrüstungskarte, wenn sie das Spielfeld verlässt. Du kannst diesen Effekt von „Bioinsekten-Panzer“ nur einmal pro Spielzug verwenden. Das ausgerüstete Monster erhält nur während der Battle Phase und Main Phase 2 1500 ATK/2000 DEF.
+  es: |-
+    Si esta carta está en tu mano o Cementerio y no controlas "Armadura Bio-Insecto": puedes seleccionar 1 monstruo Insecto que controles; equípale esta carta, pero destiérralo cuando deje el Campo, y además destierra esta Carta de Equipo cuando deje el Campo. Sólo puedes usar este efecto de "Armadura Bio-Insecto" una vez por turno. El monstruo equipado gana 1500 ATK/2000 DEF, sólo durante la Battle Phase y Main Phase 2.
+  fr: |-
+    Si cette carte est dans votre main ou Cimetière et que vous ne contrôlez pas "Bio-Armure d'Insecte" : vous pouvez cibler 1 monstre Insecte que vous contrôlez ; équipez-lui cette carte, mais bannissez-le lorsqu'il quitte le Terrain, et aussi, bannissez cette Carte d'Équipement lorsqu'elle quitte le Terrain. Vous ne pouvez utiliser cet effet de "Bio-Armure d'Insecte" qu'une fois par tour. Le monstre équipé gagne 1500 ATK/2000 DEF uniquement durant la Battle Phase et Main Phase 2.
+  it: |-
+    Se questa carta è nella tua mano o Cimitero e tu non controlli "Armatura Bio-Insetto": puoi scegliere come bersaglio 1 mostro Insetto che controlli; equipaggia questa carta a esso, ma bandiscila quando lascia il Terreno, inoltre bandisci questa Carta Equipaggiamento quando essa lascia il Terreno. Puoi utilizzare questo effetto di "Armatura Bio-Insetto" una sola volta per turno. Il mostro equipaggiato guadagna 1500 ATK/2000 DEF solamente durante la Battle Phase e la Main Phase 2.
+  pt: |-
+    Se este card estiver na sua mão ou no Cemitério e você não controlar "Armadura Bioinseto": você pode escolher 1 monstro Inseto que você controla; equipe este card a ele, mas bana-o quando ele deixar o campo e, além disso, bana este Card de Equipamento quando ele deixar o campo. Você só pode usar este efeito de "Armadura Bioinseto" uma vez por turno. O monstro equipado ganha 1500 de ATK/2000 de DEF apenas durante a Fase de Batalha e Fase Principal 2.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、自分フィールドに「昆虫機甲鎧」が存在しない場合、自分フィールドの昆虫族モンスター１体を対象として発動できる。このカードを装備カード扱いとしてそのモンスターに装備する。このカード及びこの効果でこのカードを装備したモンスターは、フィールドから離れた場合に除外される。②：このカードを装備したモンスターはお互いのバトルフェイズ及びメインフェイズ２の間、攻撃力が１５００アップし、守備力が２０００アップする。
   ko: |-
