--- a/data/cards/03806388.yaml
+++ b/data/cards/03806388.yaml
@@ -2,11 +2,11 @@ konami_id: 18156
 password: 3806388
 name:
   en: Core of Chaos
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kern des Chaos
+  es: Centro del Caos
+  fr: Cœur du Chaos
+  it: Nucleo Chaos
+  pt: Núcleo Feito de Caos
   ja: <ruby>混沌核<rt>コア・オブ・カオス</rt></ruby>
   ja_romaji: Koa Obu Kaosu
   ko: 코어 오브 카오스
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. If this face-up card would leave the field, banish it instead. You can only use each of the following effects of "Core of Chaos" once per turn. You can banish 1 DARK monster from your hand or GY; Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT or DARK Synchro Monsters. If this card is Special Summoned: You can target 1 of your banished "Shell of Chaos"; Special Summon it.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch einen Karteneffekt als Spezialbeschwörung beschworen werden. Falls diese offene Karte das Spielfeld verlassen würde, verbanne sie stattdessen. Du kannst jeden der folgenden Effekte von „Kern des Chaos“ nur einmal pro Spielzug verwenden. Du kannst 1 FINSTERNIS Monster von deiner Hand oder deinem Friedhof verbannen; beschwöre diese Karte als Spezialbeschwörung von deiner Hand, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer LICHT und FINSTERNIS Synchromonstern. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 deiner verbannten „Hülle des Chaos“ wählen; beschwöre sie als Spezialbeschwörung.
+  es: |-
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial por efecto de una carta. Si esta carta boca arriba fuera a dejar el Campo, destiérrala en su lugar. Sólo puedes usar cada uno de los siguientes efectos de "Centro del Caos" una vez por turno. Puedes desterrar 1 monstruo de OSCURIDAD en tu mano o Cementerio; Invoca esta carta de Modo Especial desde tu mano, y además no puedes Invocar monstruos de Modo Especial desde el Deck Extra por el resto de este turno, excepto Monstruos de Sincronía de LUZ u OSCURIDAD. Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 de tus "Coraza del Caos" desterrados; Invócalo de Modo Especial.
+  fr: |-
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement par un effet de carte. Si cette carte face recto va quitter le Terrain, bannissez-la à la place. Vous ne pouvez utiliser chacun des effets suivants de "Cœur du Chaos" qu'une fois par tour. Vous pouvez bannir 1 monstre TÉNÈBRES depuis votre main ou Cimetière ; Invoquez Spécialement cette carte depuis votre main, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (Monstres Synchro LUMIÈRE ou TÉNÈBRES exclus) depuis l'Extra Deck le reste de ce tour. Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 de vos "Carapace du Chaos" bannis ; Invoquez-le Spécialement.
+  it: |-
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente dall'effetto di una carta. Se questa carta scoperta sta per lasciare il Terreno, invece bandiscila. Puoi utilizzare ognuno dei seguenti effetti di "Nucleo Chaos" una sola volta per turno. Puoi bandire 1 mostro OSCURITÀ dalla tua mano o Cimitero; Evoca Specialmente questa carta dalla tua mano, inoltre non puoi Evocare Specialmente mostri dall'Extra Deck per il resto di questo turno, eccetto Mostri Synchro LUCE o OSCURITÀ. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 dei tuoi "Guscio del Chaos" banditi; Evocalo Specialmente.
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial por um efeito de card. Se este card com a face para cima deixaria o campo, em vez disso, bana-o. Você só pode usar cada um dos seguintes efeitos de "Núcleo Feito de Caos" uma vez por turno. Você pode banir 1 monstro de TREVAS da sua mão ou do Cemitério; Invoque este card por Invocação-Especial da sua mão e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto Monstros Sincro de LUZ ou de TREVAS. Se este card for Invocado por Invocação-Especial: você pode escolher 1 dos seus "Concha do Caos" banidos; Invoque-o por Invocação-Especial.
   ja: |-
     このカードは通常召喚できず、カードの効果でのみ特殊召喚できる。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・墓地から闇属性モンスター１体を除外して発動できる。このカードを手札から特殊召喚する。このターン、自分は光・闇属性のＳモンスターしかＥＸデッキから特殊召喚できない。②：このカードが特殊召喚に成功した場合、除外されている自分の「混沌殻」１体を対象として発動できる。そのモンスターを特殊召喚する。③：表側表示のこのカードはフィールドから離れた場合に除外される。
   ko: |-
