--- a/data/cards/05141117.yaml
+++ b/data/cards/05141117.yaml
@@ -2,11 +2,11 @@ konami_id: 18150
 password: 5141117
 name:
   en: The Abyss Dragon Swordsoul
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Der Schwertseelen-Abgrunddrache
+  es: El Dragón del Abismo Almaespada
+  fr: Âmépée - Le Dragon des Abysses
+  it: Il Drago Abisso Spadanima
+  pt: A Espadalma Dragão do Abismo
   ja: <ruby>深<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>の<ruby>相<rt>そう</rt></ruby><ruby>剣<rt>けん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>
   ja_romaji: Shin'en no Sōkenryū
   ko: 심연의 상검룡
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by a Wyrm monster's effect. If a monster is banished by card effect (except during the Damage Step): You can Special Summon this card from the GY (if it was there when the monster was banished) or hand (even if not), but banish it when it leaves the field. If this card is Special Summoned: You can target 1 card in the Field Zone and 1 monster your opponent controls or in their GY; banish them. You can only use each effect of "The Abyss Dragon Swordsoul" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch den Effekt eines Wyrm-Monsters als Spezialbeschwörung beschworen werden. Falls ein Monster durch einen Karteneffekt verbannt wird (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung vom Friedhof (falls sie dort lag, als das Monster verbannt wurde) oder der Hand (selbst falls nicht) beschwören, aber verbanne sie, wenn sie das Spielfeld verlässt. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Karte in der Spielfeldzone und 1 Monster, das dein Gegner kontrolliert oder das sich in seinem Friedhof befindet, wählen; verbanne sie. Du kannst jeden Effekt von „Der Schwertseelen-Abgrunddrache“ nur einmal pro Spielzug verwenden.
+  es: |-
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial por un efecto de un monstruo Wyrm. Si un monstruo es desterrado por efecto de una carta (excepto durante el Damage Step): puedes Invocar esta carta de Modo Especial desde el Cementerio (si estaba allí cuando el monstruo fue desterrado) o mano (aun si no lo estaba), pero destiérrala cuando deje el Campo. Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 carta en la Zona del Campo y 1 monstruo que controle tu adversario o en su Cementerio; destiérralos. Sólo puedes usar cada efecto de "El Dragón del Abismo Almaespada" una vez por turno.
+  fr: |-
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement par un effet de monstre Wyrm. Si un monstre est banni par un effet de carte (sauf durant la Damage Step) : vous pouvez Invoquer Spécialement cette carte depuis le Cimetière (si elle y était lorsque le monstre a été banni) ou la main (même si elle n'y était pas), mais bannissez-la lorsqu'elle quitte le Terrain. Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 carte dans la Zone Terrain et 1 monstre contrôlé par votre adversaire ou dans son Cimetière ; bannissez-les. Vous ne pouvez utiliser chaque effet de "Âmépée - Le Dragon des Abysses" qu'une fois par tour.
+  it: |-
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente dall'effetto di un mostro Wyrm. Se un mostro viene bandito dall'effetto di una carta (eccetto durante il Damage Step): puoi Evocare Specialmente questa carta dal Cimitero (se era lì quando il mostro è stato bandito) o dalla mano (anche se non era lì), ma bandiscilo quando lascia il Terreno. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 carta nella Zona Terreno e 1 mostro controllato dal tuo avversario o nel suo Cimitero; bandiscili. Puoi utilizzare ogni effetto di "Il Drago Abisso Spadanima" una sola volta per turno.
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial pelo efeito de um monstro Wyrm. Se um monstro for banido por um efeito de card (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial do Cemitério (se ele estava lá quando o monstro foi banido) ou da mão (mesmo se ele não estava), mas bana-o quando ele deixar o campo. Se este card for Invocado por Invocação-Especial: você pode escolher 1 card na Zona do Campo e 1 monstro que seu oponente controla ou no Cemitério dele; bana-os. Você só pode usar cada efeito de "A Espadalma Dragão do Abismo" uma vez por turno.
   ja: |-
     このカードは通常召喚できず、幻竜族モンスターの効果でのみ特殊召喚できる。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、カードの効果でモンスターが除外された場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。②：このカードが特殊召喚に成功した場合、フィールドゾーンのカード１枚と相手のフィールド・墓地のモンスター１体を対象として発動できる。そのカードを除外する。
   ko: |-
