--- a/data/cards/26259179.yaml
+++ b/data/cards/26259179.yaml
@@ -2,11 +2,11 @@ konami_id: 18172
 password: 26259179
 name:
   en: Couple of Aces
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Ein Paar Asse
+  es: Pareja de Ases
+  fr: Couple d'As
+  it: Coppia di Assi
+  pt: Par de Ases
   ja: <ruby>Ｃｏｕｐｌｅ ｏｆ Ａｃｅｓ<rt>カップル・オブ・エーシーズ</rt></ruby>
   ja_romaji: Kappuru Obu Ēshīzu
   ko: <ruby>Couple of Aces<rt>커플 오브 에이시즈</rt></ruby>
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is in your hand: You can toss a coin and if the result is heads, Special Summon this card to your field, or if the result is tails, Special Summon this card to your opponent's field. You can only use this effect of "Couple of Aces" once per turn. If this card is Special Summoned by its effect: Draw 2 cards.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls sich diese Karte in deiner Hand befindet: Du kannst eine Münze werfen und falls das Ergebnis Kopf ist, beschwöre diese Karte als Spezialbeschwörung auf deine Spielfeldseite, oder falls das Ergebnis Zahl ist, beschwöre diese Karte als Spezialbeschwörung auf die Spielfeldseite deines Gegners. Du kannst diesen Effekt von „Ein Paar Asse“ nur einmal pro Spielzug verwenden. Falls diese Karte durch ihren Effekt als Spezialbeschwörung beschworen wird: Ziehe 2 Karten.
+  es: |-
+    Si esta carta está en tu mano: puedes lanzar una moneda y si el resultado es cara, Invoca esta carta de Modo Especial a tu Campo, o si el resultado es cruz, Invoca esta carta de Modo Especial al Campo de tu adversario. Sólo puedes usar este efecto de "Pareja de Ases" una vez por turno. Si esta carta es Invocada de Modo Especial por su efecto: roba 2 cartas.
+  fr: |-
+    Si cette carte est dans votre main : vous pouvez lancer une pièce et si le résultat est face, Invoquez Spécialement cette carte sur votre Terrain, ou si le résultat est pile, Invoquez Spécialement cette carte sur le Terrain de votre adversaire. Vous ne pouvez utiliser cet effet de "Couple d'As" qu'une fois par tour. Si cette carte est Invoquée Spécialement par son effet : piochez 2 cartes.
+  it: |-
+    Se questa carta è nella tua mano: puoi lanciare una moneta e, se il risultato è testa, Evoca Specialmente questa carta sul tuo Terreno o, se il risultato è croce, Evoca Specialmente questa carta sul Terreno del tuo avversario. Puoi utilizzare questo effetto di "Coppia di Assi" una sola volta per turno. Se questa carta viene Evocata Specialmente dal suo effetto: pesca 2 carte.
+  pt: |-
+    Se este card estiver na sua mão: você pode lançar uma moeda e, se o resultado for cara, Invoque este card por Invocação-Especial no seu campo ou, se o resultado for coroa, Invoque este card por Invocação-Especial no campo do seu oponente. Você só pode usar este efeito de "Par de Ases" uma vez por turno. Se este card for Invocado por Invocação-Especial por seu efeito: compre 2 cards.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札に存在する場合に発動できる。コイントスを１回行う。表だった場合、このカードを自分フィールドに特殊召喚する。裏だった場合、このカードを相手フィールドに特殊召喚する。②：このカードの①の効果で特殊召喚に成功した場合に発動する。自分はデッキから２枚ドローする。
   ko: |-
