--- a/data/cards/31149212.yaml
+++ b/data/cards/31149212.yaml
@@ -2,11 +2,11 @@ konami_id: 18151
 password: 31149212
 name:
   en: Kashtira Riseheart
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kashtira Riseheart
+  es: Kashtira Riseheart
+  fr: Riseheart Kashtira
+  it: Kashtira Riseheart
+  pt: Riseheart Kashtira
   ja: クシャトリラ・ライズハート
   ja_romaji: Kushatorira Raizuhāto
   ko: 크샤트리라 라이즈하트
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you control a "Kashtira" monster: You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Kashtira" card from your Deck, except "Kashtira Riseheart"; banish the top 3 cards of your opponent's Deck face-down, and if you banish any, this card's Level becomes 7. You can only use each effect of "Kashtira Riseheart" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du ein „Kashtira“-Monster kontrollierst: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer Xyz-Monstern. Während deiner Main Phase, falls diese Karte in diesem Spielzug als Normal- oder Spezialbeschwörung beschworen wurde: Du kannst 1 „Kashtira“-Karte von deinem Deck verbannen, außer „Kashtira Riseheart“; verbanne die obersten 3 Karten des Decks deines Gegners verdeckt und falls du welche verbannst, wird die Stufe dieser Karte zu 7. Du kannst jeden Effekt von „Kashtira Riseheart“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si controlas un monstruo "Kashtira": puedes Invocar esta carta de Modo Especial desde tu mano, y además no puedes Invocar monstruos de Modo Especial desde el Deck Extra por el resto de este turno, excepto Monstruos Xyz. Durante tu Main Phase, si esta carta fue Invocada de Modo Normal o Especial este turno: puedes desterrar 1 carta "Kashtira" en tu Deck, excepto "Kashtira Riseheart"; destierra las 3 cartas de la parte superior del Deck de tu adversario boca abajo y, si destierras alguna, el Nivel de esta carta se convierte en 7. Sólo puedes usar cada efecto de "Kashtira Riseheart" una vez por turno.
+  fr: |-
+    Si vous contrôlez un monstre "Kashtira" : vous pouvez Invoquer Spécialement cette carte depuis votre main, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (Monstres Xyz exclus) depuis l'Extra Deck le reste de ce tour. Durant votre Main Phase, si cette carte a été Invoquée Normalement ou Spécialement ce tour : vous pouvez bannir 1 carte "Kashtira" ("Riseheart Kashtira" exclu) depuis votre Deck ; bannissez face verso les 3 cartes du dessus du Deck de votre adversaire, et si vous en bannissez une, le Niveau de cette carte devient 7. Vous ne pouvez utiliser chaque effet de "Riseheart Kashtira" qu'une fois par tour.
+  it: |-
+    Se controlli un mostro "Kashtira": puoi Evocare Specialmente questa carta dalla tua mano, inoltre non puoi Evocare Specialmente mostri dall'Extra Deck per il resto di questo turno, eccetto Mostri Xyz. Durante la tua Main Phase, se questa carta è stata Evocata Normalmente o Specialmente in questo turno: puoi bandire 1 carta "Kashtira" dal tuo Deck, eccetto "Kashtira Riseheart"; bandisci le prime 3 carte del Deck del tuo avversario coperte e, se ne bandisci almeno una, il Livello di questa carta diventa 7. Puoi utilizzare ogni effetto di "Kashtira Riseheart" una sola volta per turno.
+  pt: |-
+    Se você controlar um monstro "Kashtira": você pode Invocar este card por Invocação-Especial da sua mão e, além disso, você não pode Invocar monstros por Invocação-Especial do Deck Adicional pelo resto deste turno, exceto Monstros Xyz. Durante sua Fase Principal, se este card foi Invocado por Invocação-Normal ou Especial neste turno: você pode banir 1 card "Kashtira" do seu Deck, exceto "Riseheart Kashtira"; bana os 3 cards do topo do Deck do seu oponente com a face para baixo e, se você banir algum, o Nível deste card se torna 7. Você só pode usar cada efeito de "Riseheart Kashtira" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「クシャトリラ」モンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。このターン、自分はＸモンスターしかＥＸデッキから特殊召喚できない。②：このカードが召喚・特殊召喚に成功したターンの自分メインフェイズに、デッキから「クシャトリラ・ライズハート」以外の「クシャトリラ」カード１枚を除外して発動できる。相手のデッキの上からカード３枚を裏側表示で除外し、このカードのレベルは７になる。
   ko: |-
