--- a/data/cards/46261704.yaml
+++ b/data/cards/46261704.yaml
@@ -2,11 +2,11 @@ konami_id: 18148
 password: 46261704
 name:
   en: Galactikuriboh
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Galaktikuriboh
+  es: Galactikuriboh
+  fr: Galactikuriboh
+  it: Galattikuriboh
+  pt: Galactikuriboh
   ja: ギャラクリボー
   ja_romaji: Gyarakuribō
   ko: 갤럭크리보
@@ -17,11 +17,21 @@ text:
   en: |-
     (This card is always treated as a "Galaxy" card.)
     When an opponent's monster declares an attack: You can discard this card; Special Summon 1 "Galaxy-Eyes Photon Dragon" from your hand or Deck, then change the attack target to it, then you can attach this card from the GY to 1 Xyz Monster on the field as material. If a "Photon" or "Galaxy" monster(s) you control would be destroyed by battle or an opponent's card effect, you can banish this card from your GY instead.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Diese Karte wird immer als „Galaxie“-Karte behandelt.)
+    Wenn ein Monster eines Gegners einen Angriff deklariert: Du kannst diese Karte abwerfen; beschwöre 1 „Galaxieaugen-Photonendrache“ als Spezialbeschwörung von deiner Hand oder deinem Deck, dann ändere das Angriffsziel auf ihn, dann kannst du diese Karte vom Friedhof als Material an 1 Xyz-Monster auf dem Spielfeld anhängen. Falls ein oder mehr „Photon“- oder „Galaxie“-Monster, die du kontrollierst, durch Kampf oder einen Karteneffekt eines Gegners zerstört würden, kannst du stattdessen diese Karte von deinem Friedhof verbannen.
+  es: |-
+    (Esta carta se trata siempre como una carta "Galaxia" o "Galáctico/a").
+    Cuando un monstruo del adversario declara un ataque: puedes descartar esta carta; Invoca de Modo Especial 1 "Dragón Fotónico de Ojos Galácticos" desde tu mano o Deck, y después cambia el objetivo del ataque a él, y después puedes acoplar esta carta en el Cementerio a 1 Monstruo Xyz en el Campo como material. Si uno o más monstruos "Fotónico/a", "Galaxia" o "Galáctico/a" que controles fueran a ser destruidos en batalla o por el efecto de una carta del adversario, puedes desterrar esta carta en tu Cementerio en su lugar.
+  fr: |-
+    (Cette carte est toujours traitée comme une carte "Galactique".)
+    Lorsqu'un monstre de l'adversaire déclare une attaque : vous pouvez défausser cette carte ; Invoquez Spécialement 1 "Dragon Photon aux Yeux Galactiques" depuis votre main ou Deck, puis transférez-lui la cible de l'attaque, puis vous pouvez attacher cette carte depuis le Cimetière à 1 Monstre Xyz sur le Terrain comme Matériel. Si un ou plusieurs monstres "Photon" ou "Galactique" que vous contrôlez vont être détruits au combat ou par un effet de carte de l'adversaire, vous pouvez bannir cette carte depuis votre Cimetière à la place.
+  it: |-
+    (Questa carta viene sempre considerata come una carta "Galattico".)
+    Quando un mostro dell'avversario dichiara un attacco: puoi scartare questa carta; Evoca Specialmente 1 "Drago Fotonico Occhi Galattici" dalla tua mano o Deck, poi cambia il bersaglio dell'attacco su di esso, poi puoi attaccare questa carta dal Cimitero a 1 Mostro Xyz sul Terreno come materiale. Se uno o più mostri "Fotonico" o "Galattico" che controlli stanno per essere distrutti in battaglia o dall'effetto di una carta dell'avversario, puoi invece bandire questa carta dal tuo Cimitero.
+  pt: |-
+    (Este card deve ser sempre considerado como um card "Galáxia".)
+    Quando um monstro do oponente declarar um ataque: você pode descartar este card; Invoque por Invocação-Especial 1 "Dragão de Fóton de Olhos das Galáxias" da sua mão ou do Deck e, depois, mude o alvo do ataque para ele e, depois, você pode associar este card do Cemitério a 1 Monstro Xyz no campo como matéria. Se um ou mais monstros "Fóton" ou "Galáxia" que você controla seriam destruídos em batalha ou por um efeito de card do oponente, em vez disso, você pode banir este card do seu Cemitério.
   ja: |-
     このカード名はルール上「ギャラクシー」カードとしても扱う。①：相手モンスターの攻撃宣言時、このカードを手札から捨てて発動できる。手札・デッキから「銀河眼の光子竜」１体を特殊召喚する。その後、攻撃対象をそのモンスターに移し替える。さらに、自分または相手フィールドのＸモンスター１体を選んで墓地のこのカードをそのモンスターの下に重ねてＸ素材にできる。②：自分フィールドの、「フォトン」モンスターまたは「ギャラクシー」モンスターが戦闘または相手の効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko: |-
