--- a/data/cards/54098121.yaml
+++ b/data/cards/54098121.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 谜之傀儡师
 text:
   en: |-
-    If another monster is Normal or Flip Summoned: Gain 500 LP.
+    Each time you or your opponent Normal Summons or Flip Summons a monster, increase your Life Points by 500 points.
   de: |-
     Solange diese Karte offen auf dem Spielfeld liegt, erhöhen sich die Life Points des kontrollierenden Spielers für jedes beschworene Monster (auch für Monster deines Gegners, aber nicht für Spezialbeschwörung) um 500 Punkte.
   es: |-
