--- a/data/cards/73478096.yaml
+++ b/data/cards/73478096.yaml
@@ -2,11 +2,11 @@ konami_id: 18146
 password: 73478096
 name:
   en: Photon Emperor
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Photonenkaiser
+  es: Emperador Fotónico
+  fr: Empereur Photon
+  it: Imperatore Fotonico
+  pt: Soberano de Fóton
   ja: フォトン・エンペラー
   ja_romaji: Foton Enperā
   ko: 포톤 엠페러
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is sent to the GY, except from the field, while another "Photon" or "Galaxy" monster is on your field or in your GY: You can Special Summon this card in Defense Position. You can only use this effect of "Photon Emperor" once per turn. After you Normal or Special Summon this card, you can Normal Summon 1 LIGHT monster during your Main Phase this turn, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.)
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte auf den Friedhof gelegt wird, außer vom Spielfeld, solange ein anderes „Photon“- oder „Galaxie“-Monster auf deiner Spielfeldseite oder in deinem Friedhof liegt: Du kannst diese Karte als Spezialbeschwörung in die Verteidigungsposition beschwören. Du kannst diesen Effekt von „Photonenkaiser“ nur einmal pro Spielzug verwenden. Nachdem du diese Karte als Normal- oder Spezialbeschwörung beschworen hast, kannst du während deiner Main Phase dieses Spielzugs zusätzlich zu deiner Normalbeschwörung / deinem Setzen 1 LICHT Monster als Normalbeschwörung beschwören. (Du kannst diesen Effekt nur einmal pro Spielzug erhalten.)
+  es: |-
+    Si esta carta es mandada al Cementerio, excepto desde el Campo, mientras otro monstruo "Fotónico/a", "Galaxia" o "Galáctico/a" está en tu Campo o en tu Cementerio: puedes Invocar esta carta de Modo Especial en Posición de Defensa. Sólo puedes usar este efecto de "Emperador Fotónico" una vez por turno. Después de que Invoques esta carta de Modo Normal o Especial, puedes Invocar de Modo Normal 1 monstruo de LUZ durante tu Main Phase este turno, además de tu Invocación Normal/Colocación. (Sólo puedes ganar este efecto una vez por turno).
+  fr: |-
+    Si cette carte est envoyée au Cimetière, sauf depuis le Terrain, tant qu'un autre monstre "Photon" ou "Galactique" est sur votre Terrain ou dans votre Cimetière : vous pouvez Invoquer Spécialement cette carte en Position de Défense. Vous ne pouvez utiliser cet effet de "Empereur Photon" qu'une fois par tour. Après que vous avez Invoqué Normalement ou Spécialement cette carte, vous pouvez Invoquer Normalement 1 monstre LUMIÈRE durant votre Main Phase ce tour, en plus de votre Invocation/Pose Normale. (Vous ne pouvez gagner cet effet qu'une fois par tour.)
+  it: |-
+    Se questa carta viene mandata al Cimitero, eccetto dal Terreno, mentre un altro mostro "Fotonico" o "Galattico" è sul tuo Terreno o nel tuo Cimitero: puoi Evocare Specialmente questa carta in Posizione di Difesa. Puoi utilizzare questo effetto di "Imperatore Fotonico" una sola volta per turno. Dopo che hai Evocato Normalmente o Specialmente questa carta, puoi Evocare Normalmente 1 mostro LUCE durante la tua Main Phase in questo turno, in aggiunta alla tua Evocazione Normale/Posizionamento. (Puoi guadagnare questo effetto una sola volta per turno.)
+  pt: |-
+    Se este card for enviado para o Cemitério, exceto do campo, enquanto outro monstro "Fóton" ou "Galáxia" estiver no seu campo ou no seu Cemitério: você pode Invocar este card por Invocação-Especial em Posição de Defesa. Você só pode usar este efeito de "Soberano de Fóton" uma vez por turno. Depois que você Invocar este card por Invocação-Normal ou Especial, você pode Invocar por Invocação-Normal 1 monstro de LUZ durante sua Fase Principal neste turno, em adição à sua Invocação-Normal/Baixar (padrão). (Você só pode se aproveitar deste efeito uma vez por turno.)
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードがフィールド以外から墓地へ送られた場合、このカード以外の「フォトン」モンスターまたは「ギャラクシー」モンスターが、自分のフィールドまたは墓地に存在していれば発動できる。このカードを守備表示で特殊召喚する。②：このカードが召喚・特殊召喚に成功したターン、自分は通常召喚に加えて１度だけ、自分メインフェイズに光属性モンスター１体を召喚できる。
   ko: |-
