--- a/data/cards/78534861.yaml
+++ b/data/cards/78534861.yaml
@@ -2,11 +2,11 @@ konami_id: 18152
 password: 78534861
 name:
   en: Scareclaw Kashtira
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Schreckensklaue Kashtira
+  es: Terrogarra Kashtira
+  fr: Kashtira Griffrayeur
+  it: Spaventartiglio Kashtira
+  pt: Espantagarra Kashtira
   ja: スケアクロー・クシャトリラ
   ja_romaji: Sukeakurō Kushatorira
   ko: 스케어클로 크샤트리라
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Scareclaw" card from your hand or GY. You can only use this effect of "Scareclaw Kashtira" once per turn. This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. If your "Kashtira" or "Scareclaw" monster battles an opponent's monster, that opponent's monster's effects are negated until the end of this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während der Main Phase (Schnelleffekt): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören und falls du dies tust, verbanne 1 „Kashtira“- oder „Schreckensklaue“-Karte von deiner Hand oder deinem Friedhof. Du kannst diesen Effekt von „Schreckensklaue Kashtira“ nur einmal pro Spielzug verwenden. Diese Karte kann angreifen, solange sie in offener Verteidigungsposition liegt. Falls sie dies tut, verwende ihre DEF für die Schadensberechnung. Falls dein „Kashtira“- oder „Schreckensklaue“-Monster gegen ein Monster eines Gegners kämpft, werden die Effekte jenes Monsters des Gegners bis zum Ende dieses Spielzugs annulliert.
+  es: |-
+    Durante la Main Phase (Efecto Rápido): puedes Invocar esta carta de Modo Especial desde tu mano y, si lo haces, destierra 1 carta "Kashtira" o "Terrogarra" en tu mano o Cementerio. Sólo puedes usar este efecto de "Terrogarra Kashtira" una vez por turno. Esta carta puede atacar mientras está en Posición de Defensa boca arriba. Si lo hace, aplica su DEF para el cálculo de daño. Si tu monstruo "Kashtira" o "Terrogarra" batalla con un monstruo del adversario, los efectos de ese monstruo del adversario son negados hasta el final de este turno.
+  fr: |-
+    Durant la Main Phase (Effet Rapide) : vous pouvez Invoquer Spécialement cette carte depuis votre main, et si vous le faites, bannissez 1 carte "Kashtira" ou "Griffrayeur" depuis votre main ou Cimetière. Vous ne pouvez utiliser cet effet de "Kashtira Griffrayeur" qu'une fois par tour. Cette carte peut attaquer tant qu'elle est en Position de Défense face recto. Si elle le fait, appliquez sa DEF pour le calcul des dommages. Si votre monstre "Kashtira" ou "Griffrayeur" combat un monstre de l'adversaire, les effets du monstre de l'adversaire sont annulés jusqu'à la fin de ce tour.
+  it: |-
+    Durante la Main Phase (Effetto Rapido): puoi Evocare Specialmente questa carta dalla tua mano e, se lo fai, bandisci 1 carta "Kashtira" o "Spaventartiglio" dalla tua mano o Cimitero. Puoi utilizzare questo effetto di "Spaventartiglio Kashtira" una sola volta per turno. Questa carta può attaccare mentre è scoperta in Posizione di Difesa. Se lo fa, applica il suo DEF per il calcolo dei danni. Se un tuo mostro "Kashtira" o "Spaventartiglio" combatte con un mostro dell'avversario, gli effetti di quel mostro dell'avversario vengono annullati fino alla fine di questo turno.
+  pt: |-
+    Durante a Fase Principal (Efeito Rápido): você pode Invocar este card por Invocação-Especial da sua mão e, se isso acontecer, bana 1 card "Kashtira" ou "Espantagarra" da sua mão ou do Cemitério. Você só pode usar este efeito de "Espantagarra Kashtira" uma vez por turno. Este card pode atacar enquanto estiver com a face para cima em Posição de Defesa. Se o fizer, use sua DEF para o cálculo de dano. Se um monstro "Kashtira" ou "Espantagarra" seu batalhar um monstro do oponente, os efeitos desse monstro do oponente são negados até o final deste turno.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分・相手のメインフェイズに発動できる。このカードを手札から特殊召喚し、自分の手札・墓地から「クシャトリラ」カードまたは「スケアクロー」カード１枚を選んで除外する。②：このカードは表側守備表示のままで攻撃できる。その場合、このカードは守備力を攻撃力として扱いダメージ計算を行う。③：自分の「クシャトリラ」モンスターまたは「スケアクロー」モンスターが、相手モンスターと戦闘を行う場合、ターン終了時までその相手モンスターの効果は無効化される。
   ko: |-
