--- a/data/cards/90027012.yaml
+++ b/data/cards/90027012.yaml
@@ -2,11 +2,11 @@ konami_id: 18168
 password: 90027012
 name:
   en: Choju of the Trillion Hands
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Choju der Billionen Hände
+  es: Choju del Trillón de Manos
+  fr: Choju au Billion de Mains
+  it: Choju dal Trilione di Mani
+  pt: Choju do Trilhão de Mãos
   ja: チョウジュ・ゴッド
   ja_romaji: Chouju Goddo
   ko: 조수의 신
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is Summoned: You can add 1 Ritual Monster and 1 Ritual Spell from your Deck to your hand. You can only use this effect of "Choju of the Trillion Hands" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte beschworen wird: Du kannst deiner Hand 1 Ritualmonster und 1 Ritualzauber von deinem Deck hinzufügen. Du kannst diesen Effekt von „Choju der Billionen Hände“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada: puedes añadir a tu mano 1 Monstruo de Ritual y 1 Mágica de Ritual en tu Deck. Sólo puedes usar este efecto de "Choju del Trillón de Manos" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée : vous pouvez ajouter 1 Monstre Rituel et 1 Magie Rituelle depuis votre Deck à votre main. Vous ne pouvez utiliser cet effet de "Choju au Billion de Mains" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata: puoi aggiungere 1 Mostro Rituale e 1 Magia Rituale dal tuo Deck alla tua mano. Puoi utilizzare questo effetto di "Choju dal Trilione di Mani" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado: você pode adicionar 1 Monstro de Ritual e 1 Magia de Ritual do seu Deck à sua mão. Você só pode usar este efeito de "Choju do Trilhão de Mãos" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが召喚・反転召喚・特殊召喚に成功した場合に発動できる。デッキから儀式モンスター１体と儀式魔法カード１枚を手札に加える。
   ko: |-
