--- a/data/cards/91749600.yaml
+++ b/data/cards/91749600.yaml
@@ -2,11 +2,11 @@ konami_id: 18165
 password: 91749600
 name:
   en: Vala, Seidhr of the Generaider Bosses
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vala, Seidhr der Generaider-Bosse
+  es: Vala, Seidhr de los Jefes Geneincursores
+  fr: Vala, Seidhr des Boss Genèraideur
+  it: Vala, Seidhr dei Boss Generaider
+  pt: Vala, Seidhr dos Chefes Generaidores
   ja: <ruby>王の呪<rt>ジェネレイド・セイズ</rt></ruby> ヴァラ
   ja_romaji: Jenereido Seizu Vara
   ko: 제너레이드 세이즈 발라
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can only control 1 "Vala, Seidhr of the Generaider Bosses". You can only use each of the following effects of "Vala, Seidhr of the Generaider Bosses" once per turn. If this card is in your hand or GY: You can send 1 other "Generaider" card from your hand to the GY; Special Summon this card, but banish it when it leaves the field. If this card is Special Summoned: You can Special Summon 1 "Generaider" monster from your hand or GY, except "Vala, Seidhr of the Generaider Bosses".
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst nur 1 „Vala, Seidhr der Generaider-Bosse“ kontrollieren. Du kannst jeden der folgenden Effekte von „Vala, Seidhr der Generaider-Bosse“ nur einmal pro Spielzug verwenden. Falls sich diese Karte in deiner Hand oder deinem Friedhof befindet: Du kannst 1 andere „Generaider“-Karte von deiner Hand auf den Friedhof legen; beschwöre diese Karte als Spezialbeschwörung, aber verbanne sie, wenn sie das Spielfeld verlässt. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 „Generaider“-Monster als Spezialbeschwörung von deiner Hand oder deinem Friedhof beschwören, außer „Vala, Seidhr der Generaider-Bosse“.
+  es: |-
+    Sólo puedes controlar 1 "Vala, Seidhr de los Jefes Geneincursores". Sólo puedes usar cada uno de los siguientes efectos de "Vala, Seidhr de los Jefes Geneincursores" una vez por turno. Si esta carta está en tu mano o Cementerio: puedes mandar al Cementerio otra carta "Geneincursor/a" en tu mano; Invoca esta carta de Modo Especial, pero destiérrala cuando deje el Campo. Si esta carta es Invocada de Modo Especial: puedes Invocar de Modo Especial 1 monstruo "Geneincursor/a" desde tu mano o Cementerio, excepto "Vala, Seidhr de los Jefes Geneincursores".
+  fr: |-
+    Vous ne pouvez contrôler qu'1 "Vala, Seidhr des Boss Genèraideur". Vous ne pouvez utiliser chacun des effets suivants de "Vala, Seidhr des Boss Genèraideur" qu'une fois par tour. Si cette carte est dans votre main ou Cimetière : vous pouvez envoyer 1 autre carte "Genèraideur" depuis votre main au Cimetière ; Invoquez Spécialement cette carte, mais bannissez-la lorsqu'elle quitte le Terrain. Si cette carte est Invoquée Spécialement : vous pouvez Invoquer Spécialement 1 monstre "Genèraideur" ("Vala, Seidhr des Boss Genèraideur" exclu) depuis votre main ou Cimetière.
+  it: |-
+    Puoi controllare solo 1 "Vala, Seidhr dei Boss Generaider". Puoi utilizzare ognuno dei seguenti effetti di "Vala, Seidhr dei Boss Generaider" una sola volta per turno. Se questa carta è nella tua mano o Cimitero: puoi mandare 1 altra carta "Generaider" dalla tua mano al Cimitero; Evoca Specialmente questa carta, ma bandiscila quando lascia il Terreno. Se questa carta viene Evocata Specialmente: puoi Evocare Specialmente 1 mostro "Generaider" dalla tua mano o Cimitero, eccetto "Vala, Seidhr dei Boss Generaider".
+  pt: |-
+    Você só pode controlar 1 "Vala, Seidhr dos Chefes Generaidores". Você só pode usar cada um dos seguintes efeitos de "Vala, Seidhr dos Chefes Generaidores" uma vez por turno. Se este card estiver na sua mão ou no Cemitério: você pode enviar 1 outro card "Generaidor" da sua mão para o Cemitério; Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Se este card for Invocado por Invocação-Especial: você pode Invocar por Invocação-Especial 1 monstro "Generaidor" da sua mão ou do Cemitério, exceto "Vala, Seidhr dos Chefes Generaidores".
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：「王の呪 ヴァラ」は自分フィールドに１体しか表側表示で存在できない。②：このカードが手札・墓地に存在する場合、手札から他の「ジェネレイド」カード１枚を墓地へ送って発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。③：このカードが特殊召喚に成功した場合に発動できる。自分の手札・墓地から「王の呪 ヴァラ」以外の「ジェネレイド」モンスター１体を選んで特殊召喚する。
   ko: |-
