--- a/data/cards/92962242.yaml
+++ b/data/cards/92962242.yaml
@@ -2,11 +2,11 @@ konami_id: 18162
 password: 92962242
 name:
   en: Jioh the Gravity Ninja
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Jioh der Gravitations-Ninja
+  es: Jioh el Ninja de la Gravedad
+  fr: Jioh le Ninja de la Gravité
+  it: Jioh il Ninja Gravitazionale
+  pt: Jioh, o Ninja da Gravidade
   ja: <ruby>重<rt>かさね</rt></ruby>の<ruby>忍<rt>にん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>－<ruby>磁<rt>ジ</rt></ruby><ruby>翁<rt>オウ</rt></ruby>
   ja_romaji: Kasane no Ninja - Jiou
   ko: 중의 첩자－지오우
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is Normal/Special Summoned, or flipped face-up: You can target up to 2 face-up monsters on the field; change them to face-down Defense Position, and if you do, any opponent's monsters that were flipped by this effect cannot change their battle positions. If a monster on the field is flipped face-up, while this monster is face-up on the field (except during the Damage Step): You can target 1 card your opponent controls; destroy it. You can only use each effect of "Jioh the Gravity Ninja" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal-/Spezialbeschwörung beschworen oder aufgedeckt wird: Du kannst bis zu 2 offene Monster auf dem Spielfeld wählen; ändere sie in die verdeckte Verteidigungsposition und falls du dies tust, können Monster des Gegners, die durch diesen Effekt verdeckt wurden, ihre Kampfpositionen nicht ändern. Falls ein Monster auf dem Spielfeld aufgedeckt wird, solange dieses Monster offen auf dem Spielfeld liegt (außer während des Damage Steps): Du kannst 1 Karte wählen, die dein Gegner kontrolliert; zerstöre sie. Du kannst jeden Effekt von „Jioh der Gravitations-Ninja“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Normal/Especial, o volteada boca arriba: puedes seleccionar hasta 2 monstruos boca arriba en el Campo; cámbialos a Posición de Defensa boca abajo y, si lo haces, cualquier monstruo del adversario que fuera volteado por este efecto no puede cambiar su posición de batalla. Si un monstruo en el Campo es volteado boca arriba, mientras este monstruo está boca arriba en el Campo (excepto durante el Damage Step): puedes seleccionar 1 carta que controle tu adversario; destrúyela. Sólo puedes usar cada efecto de "Jioh el Ninja de la Gravedad" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement/Spécialement ou retournée face recto : vous pouvez cibler max. 2 monstres face recto sur le Terrain ; changez-les en Position de Défense face verso, et si vous le faites, les monstres de l'adversaire qui ont été retournés par cet effet ne peuvent pas changer leur position de combat. Si un monstre sur le Terrain est retourné face recto, tant que ce monstre est face recto sur le Terrain (sauf durant la Damage Step) : vous pouvez cibler 1 carte contrôlée par votre adversaire ; détruisez-la. Vous ne pouvez utiliser chaque effet de "Jioh le Ninja de la Gravité" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente/Specialmente, oppure scoperta: puoi scegliere come bersaglio fino a 2 mostri scoperti sul Terreno; mettili coperti in Posizione di Difesa e, se lo fai, qualsiasi mostro dell'avversario che è stato coperto da questo effetto non può cambiare la sua posizione. Se un mostro sul Terreno viene scoperto, mentre questo mostro è scoperto sul Terreno (eccetto durante il Damage Step): puoi scegliere come bersaglio 1 carta controllata dal tuo avversario; distruggila. Puoi utilizzare ogni effetto di "Jioh il Ninja Gravitazionale" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal/Especial ou virado com a face para cima: você pode escolher até 2 monstros com a face para cima no campo; coloque-os com a face para baixo em Posição de Defesa e, se isso acontecer, quaisquer monstros do oponente que foram virados por este efeito não podem mudar suas posições de batalha. Se um monstro no campo for virado com a face para cima, enquanto este monstro estiver com a face para cima no campo (exceto durante a Etapa de Dano): você pode escolher 1 card que seu oponente controla; destrua-o. Você só pode usar cada efeito de "Jioh, o Ninja da Gravidade" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚・リバースした場合、フィールドの表側表示モンスターを２体まで対象として発動できる。そのモンスターを裏側守備表示にする。この効果で裏側守備表示になった相手フィールドのモンスターは表示形式を変更できない。②：このカードが既にモンスターゾーンに表側表示で存在する状態で、フィールドのモンスターがリバースした場合、相手フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
   ko: |-
