--- a/data/cards/99801464.yaml
+++ b/data/cards/99801464.yaml
@@ -2,11 +2,11 @@ konami_id: 18171
 password: 99801464
 name:
   en: Sari of the Silverwing Axe
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Sari von der Silberschwingenaxt
+  es: Sari del Hacha Alasplata
+  fr: Sari de la Hache de l'Aile Argentée
+  it: Sari dell'Ascia Argentoala
+  pt: Sari do Machado de Asas Prateadas
   ja: <ruby>銀<rt>ぎん</rt></ruby><ruby>翼<rt>よく</rt></ruby>の<ruby>ＡＸＥ<rt>アクス</rt></ruby>－サリー
   ja_romaji: Gin'yoku no Akusu - Sarī
   ko: 은익의 <ruby>AXE<rt>액스</rt></ruby>－서리
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     (Quick Effect): You can target 1 face-up monster on the field; equip this card from your hand or field to it. It gains 100 ATK/DEF. You can only use this effect of "Sari of the Silverwing Axe" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    (Schnelleffekt): Du kannst 1 offenes Monster auf dem Spielfeld wählen; rüste es mit dieser Karte von deiner Hand oder Spielfeldseite aus. Es erhält 100 ATK/DEF. Du kannst diesen Effekt von „Sari von der Silberschwingenaxt“ nur einmal pro Spielzug verwenden.
+  es: |-
+    (Efecto Rápido): puedes seleccionar 1 monstruo boca arriba en el Campo; equípale esta carta en tu mano o Campo. Éste gana 100 ATK/DEF. Sólo puedes usar este efecto de "Sari del Hacha Alasplata" una vez por turno.
+  fr: |-
+    (Effet Rapide) : vous pouvez cibler 1 monstre face recto sur le Terrain ; équipez-lui cette carte depuis votre main ou Terrain. Il gagne 100 ATK/DEF. Vous ne pouvez utiliser cet effet de "Sari de la Hache de l'Aile Argentée" qu'une fois par tour.
+  it: |-
+    (Effetto Rapido): puoi scegliere come bersaglio 1 mostro scoperto sul Terreno; equipaggia questa carta dalla tua mano o Terreno a esso. Esso guadagna 100 ATK/DEF. Puoi utilizzare questo effetto di "Sari dell'Ascia Argentoala" una sola volta per turno.
+  pt: |-
+    (Efeito Rápido): você pode escolher 1 monstro com a face para cima no campo; equipe este card da sua mão ou do campo a ele. Ele ganha 100 de ATK/DEF. Você só pode usar este efeito de "Sari do Machado de Asas Prateadas" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：フィールドの表側表示モンスター１体を対象として発動できる。自分の手札・フィールドからこのカードを攻撃力・守備力１００アップの装備カード扱いとしてそのモンスターに装備する。この効果は相手ターンでも発動できる。
   ko: |-
