--- a/data/cards/00863795.yaml
+++ b/data/cards/00863795.yaml
@@ -2,11 +2,11 @@ konami_id: 18147
 password: 863795
 name:
   en: Galaxy Summoner
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Galaxiebeschwörer
+  es: Invocador Galáctico
+  fr: Invocateur Galactique
+  it: Evocatore Galattico
+  pt: Invocador das Galáxias
   ja: <ruby>銀河の召喚師<rt>ギャラクシー・サモナー</rt></ruby>
   ja_romaji: Gyarakushī Samonā
   ko: 갤럭시 서머너
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is Normal or Special Summoned: You can target 1 "Photon" or "Galaxy" monster in your GY, except "Galaxy Summoner"; Special Summon it in Defense Position. You can target 1 other LIGHT monster you control; it becomes Level 4 until the end of this turn. You can only use each effect of "Galaxy Summoner" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 „Photon“- oder „Galaxie“-Monster in deinem Friedhof wählen, außer „Galaxiebeschwörer“; beschwöre es als Spezialbeschwörung in die Verteidigungsposition. Du kannst 1 anderes LICHT Monster wählen, das du kontrollierst; es wird bis zum Ende dieses Spielzugs zu Stufe 4. Du kannst jeden Effekt von „Galaxiebeschwörer“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes seleccionar 1 monstruo "Fotónico/a", "Galaxia" o "Galáctico/a" en tu Cementerio, excepto "Invocador Galáctico"; Invócalo de Modo Especial en Posición de Defensa. Puedes seleccionar otro monstruo de LUZ que controles; éste se convierte en Nivel 4 hasta el final de este turno. Sólo puedes usar cada efecto de "Invocador Galáctico" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez cibler 1 monstre "Photon" ou "Galactique" ("Invocateur Galactique" exclu) dans votre Cimetière ; Invoquez-le Spécialement en Position de Défense. Vous pouvez cibler 1 autre monstre LUMIÈRE que vous contrôlez ; jusqu'à la fin de ce tour, il devient de Niveau 4. Vous ne pouvez utiliser chaque effet de "Invocateur Galactique" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi scegliere come bersaglio 1 mostro "Fotonico" o "Galattico" nel tuo Cimitero, eccetto "Evocatore Galattico"; Evocalo Specialmente in Posizione di Difesa. Puoi scegliere come bersaglio 1 altro mostro LUCE che controlli; esso diventa di Livello 4 fino alla fine di questo turno. Puoi utilizzare ogni effetto di "Evocatore Galattico" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro "Fóton" ou "Galáxia" no seu Cemitério, exceto "Invocador das Galáxias"; Invoque-o por Invocação-Especial em Posição de Defesa. Você pode escolher 1 outro monstro de LUZ que você controla; ele se torna de Nível 4 até o final deste turno. Você só pode usar cada efeito de "Invocador das Galáxias" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、「銀河の召喚師」以外の自分の墓地の、「フォトン」モンスターまたは「ギャラクシー」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。②：このカード以外の自分フィールドの光属性モンスター１体を対象として発動できる。そのモンスターのレベルをターン終了時まで４にする。
   ko: |-
