--- a/data/cards/04928565.yaml
+++ b/data/cards/04928565.yaml
@@ -2,11 +2,11 @@ konami_id: 18153
 password: 4928565
 name:
   en: Tearlaments Kashtira
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Tränenklage Kashtira
+  es: Tiagrimentos Kashtira
+  fr: Kashtira des Tiarmentations
+  it: Tiaracrimalamenti Kashtira
+  pt: Lagrimentiara Kashtira
   ja: ティアラメンツ・クシャトリラ
   ja_romaji: Tiaramentsu Kushatorira
   ko: 티아라멘츠 크샤트리라
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Tearlaments" card from your hand or GY. If this card is Normal or Special Summoned: You can send the top 3 cards of either player's Deck to the GY. If this card is sent to the GY by card effect: You can send the top 2 cards of your Deck to the GY. You can only use each effect of "Tearlaments Kashtira" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während der Main Phase (Schnelleffekt): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören und falls du dies tust, verbanne 1 „Kashtira“- oder „Tränenklage“-Karte von deiner Hand oder deinem Friedhof. Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst die obersten 3 Karten des Decks eines beliebigen Spielers auf den Friedhof legen. Falls diese Karte durch einen Karteneffekt auf den Friedhof gelegt wird: Du kannst die obersten 2 Karten deines Decks auf den Friedhof legen. Du kannst jeden Effekt von „Tränenklage Kashtira“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Durante la Main Phase (Efecto Rápido): puedes Invocar esta carta de Modo Especial desde tu mano y, si lo haces, destierra 1 carta "Kashtira" o "Tiagrimentos" en tu mano o Cementerio. Si esta carta es Invocada de Modo Normal o Especial: puedes mandar al Cementerio las 3 cartas de la parte superior del Deck de cualquier jugador. Si esta carta es mandada al Cementerio por efecto de una carta: puedes mandar al Cementerio las 2 cartas de la parte superior de tu Deck. Sólo puedes usar cada efecto de "Tiagrimentos Kashtira" una vez por turno.
+  fr: |-
+    Durant la Main Phase (Effet Rapide) : vous pouvez Invoquer Spécialement cette carte depuis votre main, et si vous le faites, bannissez 1 carte "Kashtira" ou "Tiarmentations" depuis votre main ou Cimetière. Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez envoyer les 3 cartes du dessus du Deck de l'un des joueurs au Cimetière. Si cette carte est envoyée au Cimetière par un effet de carte : vous pouvez envoyer les 2 cartes du dessus de votre Deck au Cimetière. Vous ne pouvez utiliser chaque effet de "Kashtira des Tiarmentations" qu'une fois par tour.
+  it: |-
+    Durante la Main Phase (Effetto Rapido): puoi Evocare Specialmente questa carta dalla tua mano e, se lo fai, bandisci 1 carta "Kashtira" o "Tiaracrimalamenti" dalla tua mano o Cimitero. Se questa carta viene Evocata Normalmente o Specialmente: puoi mandare le prime 3 carte del Deck di qualsiasi giocatore al Cimitero. Se questa carta viene mandata al Cimitero dall'effetto di una carta: puoi mandare le prime 2 carte del tuo Deck al Cimitero. Puoi utilizzare ogni effetto di "Tiaracrimalamenti Kashtira" una sola volta per turno.
+  pt: |-
+    Durante a Fase Principal (Efeito Rápido): você pode Invocar este card por Invocação-Especial da sua mão e, se isso acontecer, bana 1 card "Kashtira" ou "Lagrimentiara" da sua mão ou do Cemitério. Se este card for Invocado por Invocação-Normal ou Especial: você pode enviar para o Cemitério os 3 cards do topo do Deck de qualquer duelista. Se este card for enviado para o Cemitério por um efeito de card: você pode enviar os 2 cards do topo do seu Deck para o Cemitério. Você só pode usar cada efeito de "Lagrimentiara Kashtira" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに発動できる。このカードを手札から特殊召喚し、自分の手札・墓地から「クシャトリラ」カードまたは「ティアラメンツ」カード１枚を選んで除外する。②：このカードが召喚・特殊召喚に成功した場合に発動できる。自分または相手のデッキの上からカードを３枚墓地へ送る。③：このカードが効果で墓地へ送られた場合に発動できる。自分のデッキの上からカードを２枚墓地へ送る。
   ko: |-
