--- a/data/cards/25137581.yaml
+++ b/data/cards/25137581.yaml
@@ -2,11 +2,11 @@ konami_id: 18175
 password: 25137581
 name:
   en: Sneaky "C"
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Lauerndes „C“
+  es: '"C" Sigilosa'
+  fr: Cancrelat Sournois
+  it: Intrufolante "C"
+  pt: '"B" Furtiva'
   ja: <ruby>潜<rt>せん</rt></ruby><ruby>伏<rt>ぷく</rt></ruby>する<ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Senpukusuru Jī
   ko: 잠복의 G
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When your opponent Special Summons a monster(s) (except during the Damage Step): You can Special Summon this card from your hand in face-down Defense Position, and if you do, during the End Phase of this turn, change it to face-up Defense Position. You can only use this effect of "Sneaky "C"" once per turn. If this card is flipped face-up during the End Phase: Destroy all Special Summoned monsters on the field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn dein Gegner ein oder mehr Monster als Spezialbeschwörung beschwört (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand in die verdeckte Verteidigungsposition beschwören und falls du dies tust, ändere sie während der End Phase dieses Spielzugs in die offene Verteidigungsposition. Du kannst diesen Effekt von „Lauerndes „C““ nur einmal pro Spielzug verwenden. Falls diese Karte während der End Phase aufgedeckt wird: Zerstöre alle als Spezialbeschwörung beschworenen Monster auf dem Spielfeld.
+  es: |-
+    Cuando tu adversario Invoca de Modo Especial uno o más monstruos (excepto durante el Damage Step): puedes Invocar esta carta de Modo Especial desde tu mano en Posición de Defensa boca abajo y, si lo haces, durante la End Phase de este turno, cámbiala a Posición de Defensa boca arriba. Sólo puedes usar este efecto de ""C" Sigilosa" una vez por turno. Si esta carta es volteada boca arriba durante la End Phase: destruye todos los monstruos Invocados de Modo Especial en el Campo.
+  fr: |-
+    Lorsque votre adversaire Invoque Spécialement un ou plusieurs monstres (sauf durant la Damage Step) : vous pouvez Invoquer Spécialement cette carte depuis votre main en Position de Défense face verso, et si vous le faites, changez-la en Position de Défense face recto durant la End Phase de ce tour. Vous ne pouvez utiliser cet effet de "Cancrelat Sournois" qu'une fois par tour. Si cette carte est retournée face recto, durant la End Phase : détruisez tous les monstres Invoqués Spécialement sur le Terrain.
+  it: |-
+    Quando il tuo avversario Evoca Specialmente uno o più mostri (eccetto durante il Damage Step): puoi Evocare Specialmente questa carta dalla tua mano coperta in Posizione di Difesa e, se lo fai, durante la End Phase di questo turno, mettila scoperta in Posizione di Difesa. Puoi utilizzare questo effetto di "Intrufolante "C"" una sola volta per turno. Se questa carta viene scoperta durante la End Phase: distruggi tutti i mostri Evocati Specialmente sul Terreno.
+  pt: |-
+    Quando seu oponente Invocar um ou mais monstros por Invocação-Especial (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão com a face para baixo em Posição de Defesa e, se isso acontecer, durante a Fase Final deste turno, coloque-o com a face para cima em Posição de Defesa. Você só pode usar este efeito de ""B" Furtiva" uma vez por turno. Se este card for virado com a face para cima durante a Fase Final: destrua todos os monstros no campo que foram Invocados por Invocação-Especial.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：相手がモンスターの特殊召喚に成功した時に発動できる。このカードを手札から裏側守備表示で特殊召喚する。この効果で特殊召喚したこのカードは、このターンのエンドフェイズに表側守備表示になる。②：このカードがエンドフェイズにリバースした場合に発動する。フィールドの特殊召喚されたモンスターを全て破壊する。
   ko: |-
