--- a/data/cards/27012717.yaml
+++ b/data/cards/27012717.yaml
@@ -2,11 +2,11 @@ konami_id: 18169
 password: 27012717
 name:
   en: Fierce Tiger Monghu
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Wilder Tiger Monghu
+  es: Feroz Tigre Monghu
+  fr: Tigre Féroce Monghu
+  it: Tigre Feroce Monghu
+  pt: Feroz Tigre Monghu
   ja: <ruby>猛<rt>もう</rt></ruby><ruby>虎<rt>こ</rt></ruby>モンフー
   ja_romaji: Mōko Monfū
   ko: 맹호 몽후
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     All other monsters on the field lose 500 ATK. Once per turn, during your Main Phase: You can destroy all monsters on the field with less ATK than this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Alle anderen Monster auf dem Spielfeld verlieren 500 ATK. Einmal pro Spielzug, während deiner Main Phase: Du kannst alle Monster auf dem Spielfeld zerstören, die weniger ATK als diese Karte haben.
+  es: |-
+    Todos los demás monstruos en el Campo pierden 500 ATK. Una vez por turno, durante tu Main Phase: puedes destruir todos los monstruos en el Campo con menos ATK que esta carta.
+  fr: |-
+    Tous les autres monstres sur le Terrain perdent 500 ATK. Une fois par tour, durant votre Main Phase : vous pouvez détruire tous les monstres sur le Terrain avec une ATK inférieure à cette carte.
+  it: |-
+    Tutti gli altri mostri sul Terreno perdono 500 ATK. Una volta per turno, durante la tua Main Phase: puoi distruggere tutti i mostri sul Terreno con ATK inferiore a quello di questa carta.
+  pt: |-
+    Todos os outros monstros no campo perdem 500 de ATK. Uma vez por turno, durante sua Fase Principal: você pode destruir todos os monstros no campo com ATK menor que o deste card.
   ja: |-
     ①：このカードがモンスターゾーンに存在する限り、このカード以外のフィールドのモンスターの攻撃力は５００ダウンする。②：１ターンに１度、自分メインフェイズに発動できる。このカードより低い攻撃力を持つフィールドのモンスターを全て破壊する。
   ko: |-
