--- a/data/cards/27134209.yaml
+++ b/data/cards/27134209.yaml
@@ -2,11 +2,11 @@ konami_id: 18166
 password: 27134209
 name:
   en: Beargram, Shelled Emperor of the Forest Crown
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Beargram, gepanzerter Kaiser der Waldkrone
+  es: Beargram, Emperador Acorazado de la Corona del Bosque
+  fr: Beargram, Empereur Carapacé de la Couronne Forestière
+  it: Beargram, Imperatore Guscio della Corona della Foresta
+  pt: Beargram, Imperador Concha da Coroa da Floresta
   ja: <ruby>樹<rt>じゅ</rt></ruby><ruby>冠<rt>かん</rt></ruby>の<ruby>甲<rt>こう</rt></ruby><ruby>帝<rt>てい</rt></ruby>ベアグラム
   ja_romaji: Jukan no Kōtei Beaguramu
   ko: 수관의 갑제 베어그램
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Insect and/or Plant monsters from your hand and/or GY. You can only Special Summon "Beargram, Shelled Emperor of the Forest Crown" once per turn. Your opponent cannot activate monster effects in response to your Spell/Trap Card or effect activation. Once per turn, during your Main Phase: You can destroy all face-up monsters on the field, except Insect and Plant monsters, also this card cannot attack directly for the rest of this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand oder deinem Friedhof) beschworen werden, indem du 3 Insekt- und/oder Pflanze-Monster von deiner Hand und/oder deinem Friedhof verbannst. Du kannst „Beargram, gepanzerter Kaiser der Waldkrone“ nur einmal pro Spielzug als Spezialbeschwörung beschwören. Dein Gegner kann als Reaktion auf die Aktivierung deiner Zauber-/Fallenkarten oder -effekte keine Monstereffekte aktivieren. Einmal pro Spielzug, während deiner Main Phase: Du kannst alle offenen Monster auf dem Spielfeld zerstören, außer Insekt- und Pflanze-Monstern, zusätzlich kann diese Karte für den Rest dieses Spielzugs nicht direkt angreifen.
+  es: |-
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial (desde tu mano o Cementerio) desterrando 3 monstruos Insecto y/o Planta en tu mano y/o Cementerio. Sólo puedes Invocar de Modo Especial "Beargram, Emperador Acorazado de la Corona del Bosque" una vez por turno. Tu adversario no puede activar efectos de monstruos en respuesta a la activación de tu Carta Mágica/de Trampa o su efecto. Una vez por turno, durante tu Main Phase: puedes destruir todos los monstruos boca arriba en el Campo, excepto monstruos Insecto y Planta, y además esta carta no puede atacar directamente por el resto de este turno.
+  fr: |-
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement (depuis votre main ou Cimetière) en bannissant 3 monstres Insecte et/ou Plante depuis votre main et/ou Cimetière. Vous ne pouvez Invoquer Spécialement "Beargram, Empereur Carapacé de la Couronne Forestière" qu'une fois par tour. Votre adversaire ne peut pas activer d'effets de monstre en réponse à l'activation de votre Carte Magie/Piège ou effet de Magie/Piège. Une fois par tour, durant votre Main Phase : vous pouvez détruire tous les monstres face recto sur le Terrain (monstres Insecte et Plante exclus), et aussi, cette carte ne peut pas attaquer directement le reste de ce tour.
+  it: |-
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente (dalla tua mano o Cimitero) bandendo 3 mostri Insetto e/o Pianta dalla tua mano e/o Cimitero. Puoi Evocare Specialmente "Beargram, Imperatore Guscio della Corona della Foresta" una sola volta per turno. Il tuo avversario non può attivare effetti di mostri in risposta all'attivazione delle tue Carte Magia/Trappola o dei loro effetti. Una volta per turno, durante la tua Main Phase: puoi distruggere tutti i mostri scoperti sul Terreno, eccetto i mostri Insetto e Pianta, inoltre questa carta non può attaccare direttamente per il resto di questo turno.
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial (da sua mão ou do Cemitério) ao banir 3 monstros Inseto e/ou Planta da sua mão e/ou do Cemitério. Você só pode Invocar "Beargram, Imperador Concha da Coroa da Floresta" por Invocação-Especial uma vez por turno. Seu oponente não pode ativar efeitos de monstro em resposta à ativação do seu Card de Magia/Armadilha ou seu efeito. Uma vez por turno, durante sua Fase Principal: você pode destruir todos os monstros com a face para cima no campo, exceto monstros Inseto e Planta e, além disso, este card não pode atacar diretamente pelo resto deste turno.
   ja: |-
     このカードは通常召喚できない。自分の手札・墓地の昆虫族・植物族モンスター３体を除外した場合のみ手札・墓地から特殊召喚できる。自分は「樹冠の甲帝ベアグラム」を１ターンに１度しか特殊召喚できない。①：このカードがモンスターゾーンに存在する限り、自分の魔法・罠カードの効果の発動に対して、相手はモンスターの効果を発動できない。②：１ターンに１度、自分メインフェイズに発動できる。昆虫族・植物族モンスター以外のフィールドの表側表示モンスターを全て破壊する。このターン、このカードは直接攻撃できない。
   ko: |-
