--- a/data/cards/30291086.yaml
+++ b/data/cards/30291086.yaml
@@ -2,11 +2,11 @@ konami_id: 18157
 password: 30291086
 name:
   en: Mental Tuner
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Mentaler Empfänger
+  es: Cantante Mental
+  fr: Syntoniseur Mental
+  it: Tuner Mentale
+  pt: Regulador Mental
   ja: メンタル・チューナー
   ja_romaji: Mentaru Chūnā
   ko: 멘탈 튜너
@@ -19,11 +19,31 @@ text:
     ● Banish up to 1 LIGHT and up to 1 DARK monster from your hand and/or GY; increase or decrease this card's Level by the exact number banished, until the end of this turn.
     ● Target up to 2 of your banished monsters (1 LIGHT and/or 1 DARK); return them to the GY, and if you do, increase or decrease this card's Level by the exact number returned, until the end of this turn.
     You can only use this effect of "Mental Tuner" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 dieser Effekte aktivieren;
+    ● Verbanne bis zu 1 LICHT und bis zu 1 FINSTERNIS Monster von deiner Hand und/oder deinem Friedhof; erhöhe oder verringere die Stufe dieser Karte bis zum Ende dieses Spielzugs um die genaue verbannte Anzahl.
+    ● Wähle bis zu 2 deiner verbannten Monster (1 LICHT und/oder 1 FINSTERNIS); lege sie auf den Friedhof zurück und falls du dies tust, erhöhe oder verringere die Stufe dieser Karte bis zum Ende dieses Spielzugs um die genaue zurückgelegte Anzahl.
+    Du kannst diesen Effekt von „Mentaler Empfänger“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes activar 1 de estos efectos;
+    ● Destierra hasta 1 monstruo de LUZ y hasta 1 monstruo de OSCURIDAD en tu mano y/o Cementerio; aumenta o reduce el Nivel de esta carta en el número exacto de desterrados, hasta el final de este turno.
+    ● Selecciona hasta 2 de tus monstruos desterrados (1 de LUZ y/o 1 de OSCURIDAD); devuélvelos al Cementerio y, si lo haces, aumenta o reduce el Nivel de esta carta en el número exacto de devueltos, hasta el final de este turno.
+    Sólo puedes usar este efecto de "Cantante Mental" una vez por turno.
+  fr: |-
+    Vous pouvez activer 1 de ces effets ;
+    ● Bannissez max. 1 monstre LUMIÈRE et max. 1 monstre TÉNÈBRES depuis votre main et/ou Cimetière ; jusqu'à la fin de ce tour, augmentez ou réduisez le Niveau de cette carte du nombre exact banni.
+    ● Ciblez max. 2 de vos monstres bannis (1 LUMIÈRE et/ou 1 TÉNÈBRES) ; renvoyez-les au Cimetière, et si vous le faites, augmentez ou réduisez le Niveau de cette carte du nombre exact renvoyé, jusqu'à la fin de ce tour.
+    Vous ne pouvez utiliser cet effet de "Syntoniseur Mental" qu'une fois par tour.
+  it: |-
+    Puoi attivare 1 di questi effetti;
+    ● Bandisci fino a 1 mostro LUCE e fino a 1 mostro OSCURITÀ dalla tua mano e/o Cimitero; aumenta o diminuisci il Livello di questa carta del numero esatto di mostri banditi, fino alla fine di questo turno.
+    ● Scegli come bersaglio fino a 2 dei tuoi mostri banditi (1 LUCE e/o 1 OSCURITÀ); falli ritornare nel Cimitero e, se lo fai, aumenta o diminuisci il Livello di questa carta del numero esatto di mostri fatti ritornare, fino alla fine di questo turno.
+    Puoi utilizzare questo effetto di "Tuner Mentale" una sola volta per turno.
+  pt: |-
+    Você pode ativar 1 desses efeitos;
+    ● Bana até 1 monstro de LUZ e até 1 monstro de TREVAS da sua mão e/ou do Cemitério; até o final deste turno, aumente ou diminua o Nível deste card pelo número exato de banidos.
+    ● Escolha até 2 dos seus monstros banidos (1 de LUZ e/ou 1 de TREVAS); devolva-os para o Cemitério e, se isso acontecer, até o final deste turno, aumente ou diminua o Nível deste card pelo número exato de devolvidos.
+    Você só pode usar este efeito de "Regulador Mental" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：以下の効果から１つを選択して発動できる。●光・闇属性モンスターをそれぞれ１体まで、自分の手札・墓地から除外して発動できる。ターン終了時までこのカードのレベルを、除外した数だけ上げる、または下げる。●除外されている自分の光・闇属性モンスターをそれぞれ１体まで対象として発動できる。そのモンスターを墓地に戻し、ターン終了時までこのカードのレベルを、戻した数だけ上げる、または下げる。
   ko: |-
