--- a/data/cards/38356857.yaml
+++ b/data/cards/38356857.yaml
@@ -2,11 +2,11 @@ konami_id: 18163
 password: 38356857
 name:
   en: Gishki Grimness
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Gishki-Grauen
+  es: Severidad Gishki
+  fr: Morosité Gishki
+  it: Grinta Gishki
+  pt: Severo Gishki
   ja: グリム・リチュア
   ja_romaji: Gurimu Richua
   ko: 그림 리추어
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire Tribute. If this card is Normal or Special Summoned: You can Special Summon 1 "Gishki" monster from your Deck, except "Gishki Grimness", also you can only declare attacks with Ritual Monsters until the end of this turn. You can only use this effect of "Gishki Grimness" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du genau 1 WASSER Ritualmonster durch einen Karteneffekt, der die Verwendung von Monstern erfordert, als Ritualbeschwörung beschwörst, kann diese Karte als der gesamte Tribut verwendet werden. Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst 1 „Gishki“-Monster als Spezialbeschwörung von deinem Deck beschwören, außer „Gishki-Grauen“, zusätzlich kannst du bis zum Ende dieses Spielzugs nur Angriffe mit Ritualmonstern deklarieren. Du kannst diesen Effekt von „Gishki-Grauen“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si Invocas por Ritual exactamente 1 Monstruo de Ritual de AGUA con un efecto de carta que requiere usar monstruos, esta carta puede ser usada como todo el Sacrificio. Si esta carta es Invocada de Modo Normal o Especial: puedes Invocar de Modo Especial 1 monstruo "Gishki" desde tu Deck, excepto "Severidad Gishki", y además sólo puedes declarar ataques con Monstruos de Ritual hasta el final de este turno. Sólo puedes usar este efecto de "Severidad Gishki" una vez por turno.
+  fr: |-
+    Si vous Invoquez Rituellement exactement 1 Monstre Rituel EAU avec un effet de carte qui nécessite l'utilisation de monstres, cette carte peut être utilisée pour l'ensemble du Sacrifice. Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez Invoquer Spécialement 1 monstre "Gishki" ("Morosité Gishki" exclu) depuis votre Deck, et aussi, vous ne pouvez déclarer des attaques qu'avec des Monstres Rituels jusqu'à la fin de ce tour. Vous ne pouvez utiliser cet effet de "Morosité Gishki" qu'une fois par tour.
+  it: |-
+    Se Evochi tramite Rituale esattamente 1 Mostro Rituale ACQUA con l'effetto di una carta che richiede l'uso di mostri, questa carta può essere utilizzata come l'intero Tributo. Se questa carta viene Evocata Normalmente o Specialmente: puoi Evocare Specialmente 1 mostro "Gishki" dal tuo Deck, eccetto "Grinta Gishki", inoltre puoi dichiarare attacchi solo con Mostri Rituale fino alla fine di questo turno. Puoi utilizzare questo effetto di "Grinta Gishki" una sola volta per turno.
+  pt: |-
+    Se você Invocar por Invocação-Ritual exatamente 1 Monstro de Ritual de ÁGUA com um efeito de card que requer o uso de monstros, este card pode ser usado como todo o Tributo. Se este card for Invocado por Invocação-Normal ou Especial: você pode Invocar por Invocação-Especial 1 monstro "Gishki" do seu Deck, exceto "Severo Gishki" e, além disso, você só pode declarar ataques com Monstros de Ritual até o final deste turno. Você só pode usar este efeito de "Severo Gishki" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：水属性の儀式モンスター１体を儀式召喚する場合、このカード１枚で儀式召喚に必要な分のリリースとして使用できる。②：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「グリム・リチュア」以外の「リチュア」モンスター１体を特殊召喚する。この効果の発動後、ターン終了時まで自分は儀式モンスターでしか攻撃宣言できない。
   ko: |-
