--- a/data/cards/59494222.yaml
+++ b/data/cards/59494222.yaml
@@ -2,10 +2,10 @@ konami_id: 17727
 password: 59494222
 name:
   en: Gravekeeper's Inscription
-  de:
-  es:
-  fr:
-  it:
+  de: Grabwächters Inschrift
+  es: Inscripción del Cuidador de Tumbas
+  fr: Inscription des Protecteurs du Tombeau
+  it: Iscrizione Custode di Tombe
   pt: Inscrição do Coveiro
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>守<rt>もり</rt></ruby>の<ruby>刻<rt>こく</rt></ruby><ruby>印<rt>いん</rt></ruby>
   ja_romaji: Hakamori no Kokuin
@@ -19,10 +19,26 @@ text:
     ● Neither player can activate card effects in the GY.
     ● Neither player can banish cards from the GY.
     ● Neither player can Special Summon monsters from the GYs.
-  de:
-  es:
-  fr:
-  it:
+  de: |-
+    Am Beginn deiner Main Phase 1: Wende bis zum Ende des Spielzugs deines Gegners 1 der folgenden Effekte an.
+    ● Kein Spieler kann Karteneffekte im Friedhof aktivieren.
+    ● Kein Spieler kann Karten vom Friedhof verbannen.
+    ● Kein Spieler kann Monster als Spezialbeschwörung von den Friedhöfen beschwören.
+  es: |-
+    Al comienzo de tu Main Phase 1: aplica 1 de los siguientes efectos hasta el final del turno de tu adversario.
+    ● Ningún jugador puede activar efectos de cartas en el Cementerio.
+    ● Ningún jugador puede desterrar cartas en el Cementerio.
+    ● Ningún jugador puede Invocar monstruos de Modo Especial desde el Cementerio.
+  fr: |-
+    Au début de votre Main Phase 1 : jusqu'à la fin du tour de votre adversaire, appliquez 1 des effets suivants.
+    ● Aucun joueur ne peut activer d'effets de carte dans le Cimetière.
+    ● Aucun joueur ne peut bannir de cartes depuis le Cimetière.
+    ● Aucun joueur ne peut Invoquer Spécialement de monstres depuis les Cimetières.
+  it: |-
+    All'inizio della tua Main Phase 1: applica 1 dei seguenti effetti fino alla fine del turno del tuo avversario.
+    ● Nessun giocatore può attivare effetti di carte nel Cimitero.
+    ● Nessun giocatore può bandire carte dal Cimitero.
+    ● Nessun giocatore può Evocare Specialmente mostri dai Cimiteri.
   pt: |-
     No começo da sua Fase Principal 1: aplique 1 dos seguintes efeitos até o final do turno do seu oponente.
     ● Nenhum duelista pode ativar efeitos de card no Cemitério.
