--- a/data/cards/65351555.yaml
+++ b/data/cards/65351555.yaml
@@ -2,11 +2,11 @@ konami_id: 18164
 password: 65351555
 name:
   en: Basiltrice, Familiar of the Evil Eye
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Basiltrice, Vertrauter des Bösauges
+  es: Basiltrice, Familiar del Ojo Maligno
+  fr: Basiltrice, Familier de l'Œil Maléfique
+  it: Basiltrice, Famiglio del Malocchio
+  pt: Basiltrice, o Familiar do Olho Maligno
   ja: <ruby>呪<rt>じゅ</rt></ruby><ruby>眼<rt>がん</rt></ruby>の<ruby>眷<rt>けん</rt></ruby><ruby>属<rt>ぞく</rt></ruby> バジリコック
   ja_romaji: Jugan no Kenzoku Bajirikokku
   ko: 주안의 권속 바실리코크
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If you control an "Evil Eye" monster and this card is in your hand or GY (Quick Effect): You can Special Summon this card, but banish it when it leaves the field. During your opponent's turn, you can (Quick Effect): Immediately after this effect resolves, Link Summon 1 "Evil Eye" Link Monster using monsters you control as material. When you do, you can also use "Evil Eye" Equip Spells you control as "Evil Eye" monsters. You can only use each effect of "Basiltrice, Familiar of the Evil Eye" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du ein „Bösauge“-Monster kontrollierst und sich diese Karte in deiner Hand oder deinem Friedhof befindet (Schnelleffekt): Du kannst diese Karte als Spezialbeschwörung beschwören, aber verbanne sie, wenn sie das Spielfeld verlässt. Während des Spielzugs deines Gegners kannst du (Schnelleffekt): Sofort nachdem dieser Effekt aufgelöst wurde, beschwöre 1 „Bösauge“-Linkmonster als Linkbeschwörung und verwende dafür Monster, die du kontrollierst, als Material. Wenn du dies tust, kannst du auch „Bösauge“-Ausrüstungszauber, die du kontrollierst, als „Bösauge“-Monster verwenden. Du kannst jeden Effekt von „Basiltrice, Vertrauter des Bösauges“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si controlas un monstruo "Ojo Maligno" y esta carta está en tu mano o Cementerio (Efecto Rápido): puedes Invocar esta carta de Modo Especial, pero destiérrala cuando deje el Campo. Durante el turno de tu adversario, puedes (Efecto Rápido): inmediatamente después de que se resuelva este efecto, Invocar por Enlace 1 Monstruo de Enlace "Ojo Maligno" usando monstruos que controles como material. Cuando lo haces, también puedes usar Mágicas de Equipo "Ojo Maligno" que controles como monstruos "Ojo Maligno". Sólo puedes usar cada efecto de "Basiltrice, Familiar del Ojo Maligno" una vez por turno.
+  fr: |-
+    Si vous contrôlez un monstre "Œil Maléfique" et que cette carte est dans votre main ou Cimetière (Effet Rapide) : vous pouvez Invoquer Spécialement cette carte, mais bannissez-la lorsqu'elle quitte le Terrain. Durant le tour de votre adversaire, vous pouvez (Effet Rapide) : immédiatement après la résolution de cet effet, Invoquez par Lien 1 Monstre Lien "Œil Maléfique" en utilisant des monstres que vous contrôlez comme Matériel. Lorsque vous le faites, vous pouvez aussi utiliser des Magies d'Équipement "Œil Maléfique" que vous contrôlez comme des monstres "Œil Maléfique". Vous ne pouvez utiliser chaque effet de "Basiltrice, Familier de l'Œil Maléfique" qu'une fois par tour.
+  it: |-
+    Se controlli un mostro "Malocchio" e questa carta è nella tua mano o Cimitero (Effetto Rapido): puoi Evocare Specialmente questa carta, ma bandiscila quando lascia il Terreno. Durante il turno del tuo avversario, puoi (Effetto Rapido): immediatamente dopo che questo effetto si è risolto, Evoca Link 1 Mostro Link "Malocchio" utilizzando mostri che controlli come materiale. Quando lo fai, puoi anche utilizzare Magie Equipaggiamento "Malocchio" che controlli come mostri "Malocchio". Puoi utilizzare ogni effetto di "Basiltrice, Famiglio del Malocchio" una sola volta per turno.
+  pt: |-
+    Se você controlar um monstro "Olho Maligno" e este card estiver na sua mão ou no Cemitério (Efeito Rápido): você pode Invocar este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Durante o turno do seu oponente, você pode (Efeito Rápido): imediatamente depois que este efeito resolver, Invocar por Invocação-Link 1 Monstro Link "Olho Maligno" usando monstros que você controla como matéria. Ao fazê-lo, você também pode usar Magias de Equipamento "Olho Maligno" que você controla como monstros "Olho Maligno". Você só pode usar cada efeito de "Basiltrice, o Familiar do Olho Maligno" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに、このカードが手札・墓地に存在し、自分フィールドに「呪眼」モンスターが存在する場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。②：相手ターンに発動できる。自分フィールドのモンスターをリンク素材として「呪眼」リンクモンスター１体をリンク召喚する。その際、自分フィールドの「呪眼」装備魔法カードを「呪眼」モンスターとしてリンク素材にできる。
   ko: |-
