--- a/data/cards/65477143.yaml
+++ b/data/cards/65477143.yaml
@@ -2,11 +2,11 @@ konami_id: 18161
 password: 65477143
 name:
   en: Abyss Actor - Liberty Dramatist
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Abgrundschauspieler - Freiheitsautorin
+  es: Actor del Abismo - Dramaturga de Libertad
+  fr: Acteur des Abysses - Dramaturge de la Liberté
+  it: Attore dell'Abisso - Drammaturga Libertà
+  pt: Ator do Abismo - Dramaturga da Liberdade
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>劇<rt>げき</rt></ruby><ruby>団<rt>だん</rt></ruby>－リバティ・ドラマチスト
   ja_romaji: Makai Gekidan - Ribati Doramachisuto
   ko: 마계극단－리버티 드라마티스트
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If this card is Special Summoned from the Pendulum Zone: The owner of this card reveals 3 "Abyss Script" Spells from their Deck, their opponent randomly picks 1 for this card's owner to Set on their field (but the owner destroys it during the End Phase), also shuffle the rest into the Deck. If this card is destroyed: You can shuffle 1 "Abyss Script" Spell from your GY into the Deck. You can only use each effect of "Abyss Actor - Liberty Dramatist" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Spezialbeschwörung von der Pendelzone beschworen wird: Der Besitzer dieser Karte zeigt 3 „Abgrundskript“-Zauber von seinem Deck vor, sein Gegner bestimmt zufällig 1, die der Besitzer dieser Karte auf seine Spielfeldseite setzt (aber der Besitzer zerstört sie während der End Phase), zusätzlich mische den Rest ins Deck. Falls diese Karte zerstört wird: Du kannst 1 „Abgrundskript“-Zauber von deinem Friedhof ins Deck mischen. Du kannst jeden Effekt von „Abgrundschauspieler - Freiheitsautorin“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Especial desde la Zona de Péndulo: el dueño de esta carta muestra 3 Mágicas "Guión de Abismo" en su Deck, su adversario elige 1 al azar para que el dueño de esta carta la Coloque en su Campo (pero el dueño la destruye durante la End Phase), y además baraja el resto al Deck. Si esta carta es destruida: puedes barajar al Deck 1 Mágica "Guión de Abismo" en tu Cementerio. Sólo puedes usar cada efecto de "Actor del Abismo - Dramaturga de Libertad" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Spécialement depuis la Zone Pendule : le propriétaire de cette carte révèle 3 Magies "Script des Abysses" depuis son Deck, son adversaire en prend 1 au hasard pour le propriétaire de cette carte à Poser sur son Terrain (mais le propriétaire la détruit durant la End Phase), et aussi, mélangez les cartes restantes dans le Deck. Si cette carte est détruite : vous pouvez mélanger 1 Magie "Script des Abysses" depuis votre Cimetière dans le Deck. Vous ne pouvez utiliser chaque effet de "Acteur des Abysses - Dramaturge de la Liberté" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Specialmente dalla Zona Pendulum: il proprietario di questa carta rivela 3 Magie "Sceneggiatura dell'Abisso" dal suo Deck, il suo avversario ne prende 1 a caso da far Posizionare sul suo Terreno al proprietario di questa carta (ma il proprietario la distrugge durante la End Phase), inoltre mischia il resto nel Deck. Se questa carta viene distrutta: puoi mischiare 1 Magia "Sceneggiatura dell'Abisso" dal tuo Cimitero nel Deck. Puoi utilizzare ogni effetto di "Attore dell'Abisso - Drammaturga Libertà" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Especial da Zona de Pêndulo: o dono deste card revela 3 Magias "Script do Abismo" do Deck dele, o oponente dele elege 1 delas aleatoriamente para que o dono deste card Baixe no campo dele (mas o dono a destrói durante a Fase Final) e, além disso, embaralhe o resto no Deck. Se este card for destruído: você pode embaralhar no Deck 1 Magia "Script do Abismo" do seu Cemitério. Você só pode usar cada efeito de "Ator do Abismo - Dramaturga da Liberdade" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＰゾーンからの特殊召喚に成功した場合に発動する。このカードの元々の持ち主は、自身のデッキから「魔界台本」魔法カード３枚を相手に見せ、相手はその中からランダムに１枚選ぶ。そのカード１枚を自身のフィールドにセットし、残りのカードはデッキに戻す。この効果でセットしたカードはエンドフェイズに破壊される。②：このカードが破壊された場合に発動できる。自分の墓地から「魔界台本」魔法カード１枚を選んでデッキに戻す。
   ko: |-
@@ -44,11 +49,16 @@ pendulum_scale: 8
 pendulum_effect:
   en: |-
     When a monster declares an attack: You can discard 1 card; Special Summon this card to your opponent's field. You can only use this effect of "Abyss Actor - Liberty Dramatist" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn ein Monster einen Angriff deklariert: Du kannst 1 Karte abwerfen; beschwöre diese Karte als Spezialbeschwörung auf die Spielfeldseite deines Gegners. Du kannst diesen Effekt von „Abgrundschauspieler - Freiheitsautorin“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando un monstruo declara un ataque: puedes descartar 1 carta; Invoca esta carta de Modo Especial al Campo de tu adversario. Sólo puedes usar este efecto de "Actor del Abismo - Dramaturga de Libertad" una vez por turno.
+  fr: |-
+    Lorsqu'un monstre déclare une attaque : vous pouvez défausser 1 carte ; Invoquez Spécialement cette carte sur le Terrain de votre adversaire. Vous ne pouvez utiliser cet effet de "Acteur des Abysses - Dramaturge de la Liberté" qu'une fois par tour.
+  it: |-
+    Quando un mostro dichiara un attacco: puoi scartare 1 carta; Evoca Specialmente questa carta sul Terreno del tuo avversario. Puoi utilizzare questo effetto di "Attore dell'Abisso - Drammaturga Libertà" una sola volta per turno.
+  pt: |-
+    Quando um monstro declarar um ataque: você pode descartar 1 card; Invoque este card por Invocação-Especial no campo do seu oponente. Você só pode usar este efeito de "Ator do Abismo - Dramaturga da Liberdade" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分または相手のモンスターの攻撃宣言時、手札を１枚捨てて発動できる。このカードを相手フィールドに特殊召喚する。
   ko: |-
