--- a/data/cards/kdb18455.yaml
+++ b/data/cards/kdb18455.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18455
 password:
 name:
   en: Gold Pride - Leon
@@ -88,6 +88,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 913482
